<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SignUp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="UselessParent">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="15dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_gravity="center"

                    android:contentDescription="@string/todo"
                    android:tint="#E1760F"

                    app:srcCompat="@drawable/restauranticon"
                    tools:ignore="ContentDescription,ImageContrastCheck" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20sp"
                    android:layout_marginBottom="20sp"
                    android:fontFamily="cursive"
                    android:gravity="center"
                    android:padding="10sp"
                    android:text="@string/cafe_house"
                    android:textColor="#C86D14"
                    android:textSize="60sp" />











                <EditText
                    android:id="@+id/editTextTextEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:autofillHints=""
                    android:background="@drawable/backgrounedtview"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/sohailanwar_gmail_com"
                    android:inputType="textEmailAddress"
                    android:padding="10dp"
                    android:textSize="25sp"
                    tools:ignore="TextContrastCheck" />

                <EditText
                    android:id="@+id/editTextNumberPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:autofillHints=""
                    android:background="@drawable/backgrounedtview"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/sohailanwar"
                    android:inputType="numberPassword"
                    android:padding="10dp"
                    android:textSize="20sp"
                    tools:ignore="TouchTargetSizeCheck" />
                <Button
                    android:id="@+id/Battonlogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20sp"
                    android:background="@drawable/grad_button"
                    android:text="@string/login"
                    android:textColor="@color/white"
                    android:padding="8dp"
                    android:textSize="20sp"
                    android:textStyle="bold" />



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"

                    android:orientation="horizontal"
                    android:layout_marginBottom="10dp"

                    >

                    <View
                        android:id="@+id/view"
                        android:layout_width="135dp"
                        android:layout_marginTop="15dp"
                        android:layout_height="2dp"
                        android:background="#443C20"
                        />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/or_with"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"

                        android:textSize="20sp" />

                    <View
                        android:id="@+id/view2"
                        android:layout_width="115dp"
                        android:layout_marginTop="15dp"
                        android:layout_height="2dp"
                        android:background="#443C20"
                        />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:orientation="horizontal"


                    >


                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="#3C62AC"
                        android:drawableStart="@drawable/facebookogo"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/facebook"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="#C3463B"
                        android:drawableStart="@drawable/googlemaps"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/google"
                        android:textColor="@color/white"
                        android:textSize="20sp"

                        android:textStyle="bold"

                        />
                </LinearLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/already_have_account_login"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:gravity="center">

                </TextView>



            </LinearLayout>
        </ScrollView>

    </LinearLayout>

</LinearLayout>